--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://disasteramerica.github.io/Contents-Restoration/">https://disasteramerica.github.io/Contents-Restoration/</a><br>
+                <a target="_bLank" href="https://disasteramerica.s3.us-east-005.backblazeb2.com/Contents+Restoration/index.html">https://disasteramerica.s3.us-east-005.backblazeb2.com/Contents+Restoration/index.html</a><br>
+                <a target="_bLank" href="https://vercel.com/api/toolbar/link/contents-restoration-git-main-disaster-americas-projects.vercel.app?via=deployment-domains-list&p=1&page=/">https://vercel.com/api/toolbar/link/contents-restoration-git-main-disaster-americas-projects.vercel.app?via=deployment-domains-list&p=1&page=/</a><br>
+                <a target="_bLank" href="https://flourishing-tanuki-1ccf4e.netlify.app">https://flourishing-tanuki-1ccf4e.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
